update(#1): 이슈 템플릿 추가
리펙토링 요청 및 테스트 코드 작성 요청 템플릿에 labael 추가.

--- a/.github/ISSUE_TEMPLATE/🔨-리펙토링-요청.md
+++ b/.github/ISSUE_TEMPLATE/🔨-리펙토링-요청.md
@@ -9,7 +9,7 @@ assignees: ''
 
 ## 🎯 목표 (Goal)
 <!---
-이 리팩토링을 통해 **궁극적으로 달성하고자 하는 목표**를 명확하게 설명해주세요. (예: 가독성 향상, 성능 개선, 특정 기술 부채 해소, 테스트 용이성 증대 등)
+이 리팩토링을 통해 궁극적으로 달성하고자 하는 목표를 명확하게 설명해주세요. (예: 가독성 향상, 성능 개선, 특정 기술 부채 해소, 테스트 용이성 증대 등)
 --->
 
 ---
@@ -24,7 +24,7 @@ assignees: ''
 
 ## ✅ 완료 기준 (Definition of Done)
 <!---
-이 리팩토링 작업이 **언제 완료되었다고 판단**할 수 있는지 기준을 명시해주세요.
+이 리팩토링 작업이 언제 완료되었다고 판단할 수 있는지 기준을 명시해주세요.
 
 * [ ] 기존 기능의 **모든 테스트** 통과
 * [ ] 코드 리뷰 후 **머지 승인**
